# switch-display

./: Cargo.toml  LICENSE  README.md
src/: main.rs  screen.rs  switch.rs  xrandr.rs
src/screen_controller/: mod.rs  randr.rs  utils.rs
src/screen_controller/sway/: mod.rs  parsing.rs
src/screen_controller/xrandr/: mod.rs  parsing.rs
