[package]
name = "switch-display"
version = "0.1.0"
edition = "2024"
authors = ["Yegor Derevenets <yegor.derevenets@gmail.com>"]
description = "Toggle displays between three states: all on, only external on, only internal on"

[features]
default = ["xrandr", "sway"]
xrandr = ["dep:regex"]
sway = ["dep:serde", "dep:serde_json"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
regex = { version = "1.11.1", default-features = false, features = ["unicode-perl"], optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.142", optional = true }
